# discord_ai_bot

./: .env.test  pyproject.toml
resources/: scenarios.json
src/: ai_agent.py  discord.py  discord_client.py  logger.py  main.py  message_generator.py  resources_manager.py  settings.py
tests/: conftest.py  test_resources_manager.py  test_settings.py
