[project]
name = "discord-ai-bot"
version = "0.1.0"
description = "It's AI bot for discord"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "audioop-lts>=0.2.2",
    "discord-py-self[voice]>=2.0.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "taskiq>=0.12.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint[spelling]>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "UP007",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


